@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <!--
  *****************************************************************************
- * Copyright 1997-2009,2010 by Thomas E. Dickey                              *
+ * Copyright 1997-2010,2011 by Thomas E. Dickey                              *
  * All Rights Reserved.                                                      *
  *                                                                           *
  * Permission to use, copy, modify, and distribute this software and its     *
@@ -20,7 +20,7 @@
  * ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF   *
  * OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.            *
  *****************************************************************************
-  $XTermId: xterm.faq.html,v 1.167 2010/11/25 14:10:03 tom Exp $
+  $XTermId: xterm.faq.html,v 1.168 2011/09/12 08:37:53 tom Exp $
   -->
 <HTML>
 <HEAD>
@@ -30,7 +30,8 @@
 </HEAD>
 <BODY>
 <HR>
-Copyright 1997-2009,2010 by Thomas E. Dickey
+<a href="http://invisible-island.net/">http://invisible-island.net/</a><a href="http://invisible-island.net/xterm/">xterm/</a><br>
+Copyright &copy; 1997-2010,2011 by Thomas E. Dickey
 <HR>
 <a href="http://invisible-island.net/xterm/xterm.faq.html">Here</a>
 is the latest version of this file.
@@ -1631,7 +1632,7 @@ which would not affect the home/end keys.
 which I tested with xterm-88c, xterm-149 and xterm-158,
 using $TERM set to xterm-debian:
 <!--{{atr2html--><p style="font-family: monospace; font-size: 10pt;">
-<font color="#800000">!&nbsp;$Id: xterm.faq.html,v 1.167 2010/11/25 14:10:03 tom Exp $<br>
+<font color="#800000">!&nbsp;$Id: xterm.faq.html,v 1.168 2011/09/12 08:37:53 tom Exp $<br>
 </font><font color="#800000">!&nbsp;Settings&nbsp;to&nbsp;make&nbsp;xterm-88c&nbsp;work&nbsp;as&nbsp;expected&nbsp;for&nbsp;Debian.<br>
 </font><font color="#800000">!<br>
 </font><font color="#800000">!&nbsp;Patch&nbsp;#88&nbsp;was&nbsp;the&nbsp;basis&nbsp;for&nbsp;XFree86&nbsp;3.3.1&nbsp;xterm.&nbsp;&nbsp;There&nbsp;were&nbsp;a&nbsp;few&nbsp;additions<br>
